[package]
name = "occrs"
description = "A CLI utility for counting occurances of unique items in a list"
license = "Apache-2.0"
version = "1.1.0"
authors = ["Epicalert <epicalert@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
